<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WorkOnDictActivity" >

    <TextView
        android:id="@+id/txtHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/work_on_dict_hint"
        android:text="@string/work_on_dict_hint" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtHint"
        android:orientation="horizontal" >

        <AutoCompleteTextView
            android:id="@+id/edtSearchWord"
            android:selectAllOnFocus="true"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="top" />
        <ImageButton
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="onSearchClick"
            android:background="@drawable/ic_search"
            android:contentDescription="@string/work_on_dict_search_hint"
            android:src="@drawable/ic_search" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:hint="@string/work_on_dict_search_inf"
        android:text="@string/work_on_dict_search_inf" />
    
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInfo"
        android:orientation="horizontal" >

        <AutoCompleteTextView
            android:id="@+id/edtOutWord"
            android:enabled="false"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="top" 
        />
        <ImageButton
            android:id="@+id/btnEdit"
            android:onClick="onEditClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/ic_pencil"
            android:contentDescription="@string/work_on_dict_edit_hint"
            android:enabled="false"
            android:src="@drawable/ic_pencil"/>

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:orientation="horizontal" >
    <TextView
        android:id="@+id/txtTypeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/work_on_dict_type_inf"
        android:text="@string/work_on_dict_type_inf" />
    <Spinner
        android:id="@+id/spinner1"
        android:entries="@array/word_type_arrays"
        android:prompt="@string/type_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"/>
    <TextView
        android:id="@+id/txtLevelInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/work_on_dict_level_inf"
        android:text="@string/work_on_dict_level_inf" />
    <Spinner
        android:id="@+id/spinner2"
        android:entries="@array/word_level_arrays"
        android:prompt="@string/level_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:orientation="horizontal" >
        <ImageButton
            android:id="@+id/btnSave"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:onClick="onSaveClick"
            android:contentDescription="@string/work_on_dict_save_hint"
            android:background="@drawable/ic_floppy"
            android:src="@drawable/ic_floppy"/>
        <ImageButton
            android:id="@+id/btnRemove"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:onClick="onRemoveClick"
            android:contentDescription="@string/work_on_dict_remove_hint"
            android:background="@drawable/ic_recycle"
            android:src="@drawable/ic_recycle"/>
    </LinearLayout>
</RelativeLayout>