<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txtHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <ImageButton
        android:id="@+id/btnEditDict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtHello"
        android:layout_below="@+id/txtHello"
        android:onClick="onClickEditDict"
        android:background="@drawable/ic_dict"
        android:contentDescription="@string/edit_dict"
        android:src="@drawable/ic_dict"/>
    
    <ImageButton
        android:id="@+id/btnStartTrnr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtHello"
        android:layout_toRightOf="@+id/btnEditDict"
        android:onClick="onClickStartTrnr"
        android:background="@drawable/ic_start"
        android:contentDescription="@string/start"
        android:src="@drawable/ic_start"/>

    <ImageButton
        android:id="@+id/btnChangeOpt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/btnStartTrnr"
        android:layout_below="@+id/txtHello"
        android:onClick="onClickChangeOpt"
        android:background="@drawable/ic_options"
        android:contentDescription="@string/t_opt"
        android:src="@drawable/ic_options"/>


</RelativeLayout>
