<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OptionsActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    <TextView
        android:id="@+id/txtLevel_prompt"
        android:layout_width="0dip"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:hint="@string/level_prompt"
        android:text="@string/level_prompt"/>
    <Spinner
        android:id="@+id/spinner1"
        android:entries="@array/word_level_arrays"
        android:prompt="@string/level_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    <TextView
        android:id="@+id/txtNumber_to_repeat"
        android:layout_weight="2"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:hint="@string/number_words_to_repeat"
        android:text="@string/number_words_to_repeat" />
    <Spinner
        android:id="@+id/spinner2"
        android:entries="@array/word_number_arrays"
        android:prompt="@string/number_words_to_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    <TextView
        android:id="@+id/txtStriktLevel"
        android:layout_weight="2"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:hint="@string/strikt_level"
        android:text="@string/strikt_level" />
    <CheckBox
        android:id="@+id/checkbox_strickt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </LinearLayout>
    <RadioGroup
        android:id="@+id/rgTrnrOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_learn"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_selfcheck"/>
    </RadioGroup>
</LinearLayout>
